// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses a single result correctly 1`] = `
Array [
  Object {
    "attributes": Object {
      "author": null,
      "extracted_results": Array [],
      "ip": null,
      "matched": "example.com",
      "matcher_name": null,
      "metadata": null,
      "reference": null,
      "tags": null,
      "timestamp": "2021-08-20T22:53:40.4293261Z",
      "type": "dns",
    },
    "category": "dnssec-detection",
    "description": "The name of the nuclei rule which triggered the finding: dnssec-detection",
    "location": "example.com",
    "name": "DNSSEC Detection",
    "severity": "INFORMATIONAL",
  },
]
`;

exports[`parses empty result correctly 1`] = `Array []`;

exports[`parses ftp result correctly 1`] = `
Array [
  Object {
    "attributes": Object {
      "author": null,
      "extracted_results": null,
      "ip": "127.0.0.1",
      "matched": "www.example.com:21",
      "matcher_name": null,
      "metadata": Object {
        "password": "default",
        "username": "anonymous",
      },
      "reference": null,
      "tags": null,
      "timestamp": "2021-08-20T22:00:48.088618+02:00",
      "type": "network",
    },
    "category": "ftp-default-credentials",
    "description": "The name of the nuclei rule which triggered the finding: ftp-default-credentials",
    "location": "www.example.com",
    "name": "FTP Service with default credentials",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "author": null,
      "extracted_results": null,
      "ip": "127.0.0.1",
      "matched": "www.example.com:21",
      "matcher_name": null,
      "metadata": Object {
        "password": "stingray",
        "username": "anonymous",
      },
      "reference": null,
      "tags": null,
      "timestamp": "2021-08-20T22:00:48.161349+02:00",
      "type": "network",
    },
    "category": "ftp-default-credentials",
    "description": "The name of the nuclei rule which triggered the finding: ftp-default-credentials",
    "location": "www.example.com",
    "name": "FTP Service with default credentials",
    "severity": "HIGH",
  },
]
`;

exports[`parses log4j result correctly 1`] = `
Array [
  Object {
    "attributes": Object {
      "author": null,
      "extracted_results": Array [
        "log4j-demo-6f5db46df9-5z29w",
      ],
      "ip": null,
      "matched": "http://203.0.113.0:8080/",
      "matcher_name": null,
      "metadata": null,
      "reference": null,
      "tags": null,
      "timestamp": "2021-12-14T19:18:12.734881355Z",
      "type": "http",
    },
    "category": "CVE-2021-44228",
    "description": "The name of the nuclei rule which triggered the finding: CVE-2021-44228",
    "location": "http://203.0.113.0:8080",
    "name": "Remote code injection in Log4j",
    "severity": "HIGH",
  },
]
`;

exports[`parses the dns result correctly 1`] = `
Array [
  Object {
    "attributes": Object {
      "author": null,
      "extracted_results": null,
      "ip": null,
      "matched": "www.example.com",
      "matcher_name": "github",
      "metadata": null,
      "reference": null,
      "tags": null,
      "timestamp": "2021-08-21T00:18:21.754428+02:00",
      "type": "dns",
    },
    "category": "cname-service-detector",
    "description": "The name of the nuclei rule which triggered the finding: cname-service-detector",
    "location": "www.example.com",
    "name": "3rd party service checker",
    "severity": "INFORMATIONAL",
  },
]
`;
